[package]
authors = ["Kevin Boos <kevinaboos@gmail.com>", "Klim Tsoutsman <klim@tsoutsman.com>"]
name = "preemption"
description = "Handles enabling and disabling preemption for each CPU core"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.8"
cpu = { path = "../cpu" }
atomic_linked_list = { path = "../../libs/atomic_linked_list" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
apic = { path = "../apic" }

[lib]
crate-type = ["rlib"]
