[package]
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
name = "runqueue"
description = "Functions and types for handling runqueues, i.e., lists of tasks for scheduling purposes"
version = "0.1.0"

[dependencies]

cfg-if = "1.0.0"
log = "0.4.8"
lazy_static = { features = ["spin_no_std"], version = "1.4.0" }

mutex_preemption = { path = "../mutex_preemption" }
atomic_linked_list = { path = "../../libs/atomic_linked_list" }
task = { path = "../task" }
cpu = { path = "../cpu" }
runqueue_round_robin = { path = "../runqueue_round_robin" }
runqueue_priority = { path = "../runqueue_priority" }
runqueue_realtime = { path = "../runqueue_realtime" }

## This should be dependent upon 'cfg(single_simd_task_optimization)',
## but it cannot be because of https://github.com/rust-lang/cargo/issues/5499.
## Therefore, it has to be unconditionally included.
single_simd_task_optimization = { path = "../single_simd_task_optimization" }

[lib]
crate-type = ["rlib"]
