[package]
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
name = "scheduler"
description = "Provides scheduling functionality for selecting the next task and causing a task switch"
version = "0.1.0"
edition = "2018"

[dependencies]
spin = "0.9.4"
log = "0.4.8"
cfg-if = "1.0.0"

irq_safety = { git = "https://github.com/theseus-os/irq_safety" }

task = { path = "../task" }
preemption = { path = "../preemption" }
runqueue = { path = "../runqueue" }
scheduler_round_robin = { path = "../scheduler_round_robin" }
scheduler_priority = { path = "../scheduler_priority" }
scheduler_realtime = { path = "../scheduler_realtime" }
[lib]
crate-type = ["rlib"]
