[package]
authors = ["Namitha Liyanage <namithaliyanage@gmail.com>"]
name = "scheduler_priority"
description = "Provides priority scheduling functionality and picks the next task"
version = "0.1.0"

[dependencies]
spin = "0.9.4"
log = "0.4.8"

task = { path = "../task" }
cpu = { path = "../cpu" }
runqueue = { path = "../runqueue" }
runqueue_priority = { path = "../runqueue_priority" }

[lib]
crate-type = ["rlib"]
